<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textview_hour_code_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_hour_code_temp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textview_hour_temp_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_hour_temp_res"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/textview_hour_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_hour_hour"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>