<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|left">


    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        android:textFontWeight="100"
        android:text="+"
        style="?android:attr/borderlessButtonStyle"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/textview_city"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textview_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/textview_temp"
                    android:textColor="@color/white"
                    android:textSize="70dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/white_transparent"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:id="@+id/textview_temp_res"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/textview_temp"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/white_transparent"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:id="@+id/textview_code_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/textview_code_temp"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/white_transparent"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:id="@+id/textview_temp_min_max"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/textview_temp_min_max"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="0dp"
                    app:cardBackgroundColor="@color/white_transparent"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="0dp"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/day_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="30dp"
                    app:cardBackgroundColor="@color/white_transparent"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/hour_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:scrollbars="horizontal"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>